--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ padding: 30px 8px;
     /* transform: translateY(5px); */
 }
 .nav .nav-content .nav-right input {
-    border: none;
+    border: none;   
     width: 29px;
     transform: translateX(48px);
     transition-duration: 0.5s;
@@ -504,11 +504,18 @@ footer .footer-content .footer-column a img:hover {
     
 }
 
+#chartdiv {
+    width: 100%;
+    height: 500px;
+  }
+
+
+
 .history_chart {
     margin-top: 15px;
     width: 100%;
-        height: 373px;
-        background-color: rgba(0, 139, 139, 0.216);
+        /* height: 373px;
+        background-color: rgba(0, 139, 139, 0.216); */
     }
     .free_back {
         height: 700px;
